--- a/kubernetes/Deployment.yaml
+++ b/kubernetes/Deployment.yaml
@@ -1,34 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app: cicd-java-maven
-  name: cicd-java-maven
-  namespace: cicd-java-maven
+  name: myapp
+  namespace: dev-cicd-mvn
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: cicd-java-maven
+      app: myapp
   template:
     metadata:
       labels:
-        app: cicd-java-maven
+        app: myapp
     spec:
       containers:
-        - image: dash18/cicd-java-maven
-          imagePullPolicy: Always
-          name: cicd-java-maven
-          ports:
-            - containerPort: 8080
-              name: cicd-java-maven
-              protocol: TCP
-          resources:
-            limits:
-              cpu: 1
-              memory: 1Gi
-            requests:
-              cpu: 1
-              memory: 1Gi
-          terminationMessagePath: /dev/termination-log
-          terminationMessagePolicy: File
+      - name: myapp
+        image: image-registry.openshift-image-registry.svc:5000/dev-cicd-mvn/myapp:latest
+        ports:
+        - containerPort: 8090
+        env:
+        - name: SERVER_PORT
+          value: "8090"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp
+spec:
+  selector:
+    app: myapp
+  ports:
+  - protocol: TCP
+    port: 8090
+    targetPort: 8090
